--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body onload="startTime()">
     <script src="script.js"></script>
     <h1><center>Selamat Datang</center></h1>
-
+    <p><center>Ini Adalah website dibuat dengan HTML, CSS, dan JavaScript</center></p>
     <div class="jam">
         <p id="hasil">Waktu Saat Ini </p>
     </div>
